# backup_rsync

./: .gitignore  README.adoc  pyproject.toml
backup_rsync/: backup.py  logger.py
samples/: backup.sh  backup_config.yaml  local_clone.yaml  local_version.yaml  remote_version.yaml
tests/: test_backup.py
